--- a/styles/indexstyles.css
+++ b/styles/indexstyles.css
@@ -1,10 +1,22 @@
-html,body { 
+html { 
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     overflow-x: hidden;
     width: 100%;
     max-width: 100%;
+    height: 100%;
+}
+
+body { 
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-y: auto;
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
 }
 
 * {
@@ -300,4 +312,5 @@ h2{
     #email{
         margin-bottom: 20px;
     }
+}
 }
